openmediavault (7.7.4-1) stable; urgency=medium

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Apr 2025 12:50:50 +0200

openmediavault (7.7.3-1) stable; urgency=medium

  * Improve form layout.
  * Issue #1941: Add UDEV rule to fix the duplicate serial number
    issue for TerraMaster D5-300 and other hard drive enclosures
    based on the JMicron Gen1 SATA 6Gb/s Bridge.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Mar 2025 18:01:41 +0100

openmediavault (7.7.2-1) stable; urgency=medium

  * Update locale files.
  * Several improvements in the storage handling code.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Mar 2025 19:55:29 +0100

openmediavault (7.7.1-3) stable; urgency=low

  * Update locale files.
  * Add `omv-salt deploy list-dirty` command to list dirty modules.
  * Fix bug in scheduled task pages when a value other than
    `Specific date` is selected for `Execution time`.
  * Issue #1931: Decode URI component in route context service.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Feb 2025 20:18:37 +0100

openmediavault (7.7.0-2) stable; urgency=low

  * Update locale files.
  * Several UI improvements.
  * Refactor the RPC to umnount file systems to be able to get
    rid of non-existing file systems. The RPC `FileSystemMgmt::umount`
    has been renamed to `umountByFsName` and `umountByDir` has been
    added.
  * Issue #1912: Fix pinning of backports repository.
  * Issue #1918: Improve processing of tokenized strings.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 30 Jan 2025 18:07:22 +0100

openmediavault (7.6.0-1) stable; urgency=low

  * Update locale files.
  * Add option to disable the automatic installation of security
    updates.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Jan 2025 15:18:02 +0100

openmediavault (7.5.2-1) stable; urgency=low

  * Update locale files.
  * Fix database migration issue introduced by issue #1875.