@@ -1,6 +1,7 @@
 openmediavault (7.7.4-1) stable; urgency=medium
 
-  *
+  * Issue #1170: Add support to dynamically reload `select` form
+    fields.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Apr 2025 12:50:50 +0200
 
